Fix modal being rendered behind everything

--- a/src/style.css
+++ b/src/style.css
@@ -50,6 +50,7 @@ header h1 {
 
 .projModalBg,
 .taskModalBg {
+	z-index: 1;
 	display: none;
 	align-items: center;
 	justify-content: center;
@@ -60,7 +61,6 @@ header h1 {
 	backdrop-filter: blur(5px);
 }
 .modal {
-	z-index: 1;
 	border-radius: 5px;
 	background-color: var(--off-white);
 	filter: drop-shadow(0px 2px 5px #0000005b);
@@ -228,8 +228,12 @@ img {
 }
 
 @media only screen and (max-width: 600px) {
+	#taskContainer {
+		width: 90%;
+	}
 	#sidebar {
 		position: fixed;
+		display: none;
 	}
 	.modal {
 		width: 90%;
@@ -239,10 +243,10 @@ img {
 	}
 
 	.task {
-		font-size: 11px;
+		font-size: 10px;
 	}
 
 	#subtitle {
-		font-size: 9px;
+		font-size: 10px;
 	}
 }
